@@ -2,6 +2,7 @@
 
 	* interp.c: use the new marshaling code. better delegate/remoting 
 	support.
+	(ves_exec_method): bug fix - directly jump to handle_exception.
 
 2002-07-29  Dietmar Maurer  <dietmar@ximian.com>
 
